--- a/packages/default_config/logger.yaml
+++ b/packages/default_config/logger.yaml
@@ -4,7 +4,7 @@ logger:
 #  custom_components.braviatv_psk: debug
     NodeRed: debug
     custom_components.skyq: info
-    custom_components.samsungtv_tizen: info
+    pyskyqremote: info
     # custom_components.o365: debug
     homeassistant.loader: error
     homeassistant.components.ring: error
