--- a/packages/grafana.yaml
+++ b/packages/grafana.yaml
@@ -48,8 +48,14 @@ influxdb:
       - climate
       - weather
     entities:
-      - sensor.ovo_last_electricity_reading
-      - sensor.ovo_last_electricity_cost
+    #   - sensor.ovo_last_electricity_reading
+    #   - sensor.ovo_last_electricity_cost
+      - sensor.tc_electricity_instant
+      - sensor.tc_oil_power
+      - sensor.tc_oil_usage
+      - sensor.tc_oil_total
+      - sensor.tc_tv_power
+      - sensor.tc_utility_power
       - sensor.nest_heating
       - sensor.nest_hotwater
       - sensor.tyr_celyn_humidity
