--- a/packages/o365.yaml
+++ b/packages/o365.yaml
@@ -1,5 +1,14 @@
+# o365:
+#   client_secret: !secret o365_secret
+#   client_id: !secret o365_id
+#   enable_update: True
+#   alt_auth_method: False
+
 o365:
-  client_secret: !secret o365_secret
-  client_id: !secret o365_id
-  enable_update: True
-  alt_auth_method: False
+  accounts:
+    - account_name: converted
+      alt_auth_method: false
+      client_secret: !secret o365_secret
+      client_id: !secret o365_id
+      enable_update: true
+      track_new_calendar: true
