--- a/packages/nest.yaml
+++ b/packages/nest.yaml
@@ -28,6 +28,16 @@ binary_sensor:
           {% else %}
             false
           {% endif %}
+    #   nest_tc_protect_lr:
+    #     friendly_name: TC - Protect - LR
+    #     device_class: heat
+    #     value_template: >-
+    #       {% if is_state('binary_sensor.tc_living_room_3', 'on') %}
+    #         true
+    #       {% else %}
+    #         false
+    #       {% endif %}
+
 sensor:
   - platform: template
     sensors:
